<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/edit_product_name_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_product_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/edit_product_name_headline"
        android:text="@string/product_name_here" />

    <TextView
        android:id="@+id/edit_description_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_product_name_headline"
        android:text="@string/description"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_description_headline"
        android:layout_alignBottom="@+id/edit_description_headline"
        android:layout_toRightOf="@+id/edit_description_headline"
        android:text="@string/description_here" />

    <TextView
        android:id="@+id/edit_cost_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_description_headline"
        android:text="@string/cost"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_cost_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_cost_headline"
        android:layout_alignBottom="@+id/edit_cost_headline"
        android:layout_toRightOf="@+id/edit_cost_headline"
        android:text="@string/cost_here" />

    <TextView
        android:id="@+id/edit_rrp_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_cost_headline"
        android:text="@string/rrp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_rrp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_rrp_headline"
        android:layout_alignBottom="@+id/edit_rrp_headline"
        android:layout_toRightOf="@+id/edit_rrp_headline"
        android:text="@string/rrp_here" />

</RelativeLayout>