<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/category_create_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/insert_category"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/category_name_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/category_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_category_name_here" />

    <TextView
        android:id="@+id/staff_name_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/staff_responsible_for_the_category"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/staff_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/create_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_category_here"
        android:textSize="20sp" />

</LinearLayout>