<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/product_create_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_product"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/product_name_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/product_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name" />

    <TextView
        android:id="@+id/description_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_headline" />

    <TextView
        android:id="@+id/cost_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cost_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost" />

    <TextView
        android:id="@+id/rrp_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rrp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/rrp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rrp" />

    <TextView
        android:id="@+id/category_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/categories_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <Button
        android:id="@+id/create_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_product"
        android:textSize="20sp" />

</LinearLayout>