<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/list_oneline_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_quantity_of_product"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_oneline_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#fff"
        android:dividerHeight="10dp" >
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/list_edit_oneline_quantity_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/list_edit_oneline_quantity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_quantity_here" />

    <Button
        android:id="@+id/edit_quantity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_quantity" />

</LinearLayout>