<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/category_headline_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/category"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/responsible_headline_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/category_headline_show"
        android:text="@string/responsible"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/category_text_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/responsible_headline_show"
        android:layout_toRightOf="@+id/category_headline_show"
        android:text="@string/insert_category_here" />

    <TextView
        android:id="@+id/responsible_text_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/responsible_headline_show"
        android:layout_alignBottom="@+id/responsible_headline_show"
        android:layout_toRightOf="@+id/responsible_headline_show"
        android:text="@string/firstname_surname" />

</RelativeLayout>
