<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_over_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_user"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username" >
    </EditText>

    <TextView
        android:id="@+id/password_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here" />

</LinearLayout>